--- a/fichero.html
+++ b/fichero.html
@@ -3,15 +3,14 @@
 
 <HEAD>
 
-<TITLE>Un Titulo para el Browser de turno </TITLE>
+<TITLE>Curso Git</TITLE>
 
 </HEAD>
 
 <BODY>
 
-<!-- Aqui va todo lo chachi -->
 
-<H1>Otro t&iacute;tulo, esta vez m&aacute;s largo. </H1>
+<H1>Curso Git Enero 2019 </H1>
 
 <P> 
 
@@ -25,7 +24,7 @@ si <STRONG>cambia </STRONG> de linea!
 
 <P>Otro parrafo, esto ya es un poco rollo.
 
-<H3>Pongamos un subtítulo<H3>
+<H3>Pongamos un subtÃ­tulo<H3>
 
 
 
