--- a/fichero.html
+++ b/fichero.html
@@ -1,11 +1,49 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="uft-8"/>
-    <title>Hola Mundo en HTML</title>
-  </head>
-  <body>
-    <h1>Hola Mundo</h1>
-    
-  </body>
-</html>
+<HTML>
+
+<HEAD>
+
+<TITLE>Un Titulo para el Browser de turno </TITLE>
+
+</HEAD>
+
+<BODY>
+
+<!-- Aqui va todo lo chachi -->
+
+<H1>Otro t&iacute;tulo, esta vez m&aacute;s largo. </H1>
+
+<P> 
+
+<P>Esto es un parrafo con informacion
+
+super importante. Notese que las lineas salen pegadas aun dejando
+
+espacios, saltos de linea, etc. <BR> &#161 Si pongo esto
+
+si <STRONG>cambia </STRONG> de linea!
+
+<P>Otro parrafo, esto ya es un poco rollo.
+
+<H3>Pongamos un subtítulo<H3>
+
+
+
+<HR>
+
+<UL>
+
+<LI> Esto es una lista no ordenada.
+
+<LI> Las listas quedan mejor si tienen varios elementos.
+
+</UL>
+
+
+.....................................................
+
+.....................................................
+
+</BODY>
+
+</HTML>
