Cambio editado en eclipse

--- a/fichero.html
+++ b/fichero.html
@@ -3,7 +3,7 @@
 
 <HEAD>
 
-<TITLE>Un Titulo para el Browser de turno </TITLE>
+<TITLE>Curso Git Editado en Eclipse </TITLE>
 
 </HEAD>
 
@@ -11,7 +11,7 @@
 
 <!-- Aqui va todo lo chachi -->
 
-<H1>Otro t&iacute;tulo, esta vez m&aacute;s largo. </H1>
+<H1>Lo cambiamos. </H1>
 
 <P> 
 
